testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments05(alwaysstrict=false,target=es2015).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
emitArrowFunctionWhenUsingArguments05.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== emitArrowFunctionWhenUsingArguments05.ts (1 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = () => arguments;
    }